# schoolify

./: .gitignore  ReadME.md  pull_request_template.md
crawler/: Cargo.toml  READMe.md
crawler/.cache/berlin/: _root.htm  _root_truncated.htm  catchmentarea_2019-06.geojson  crawler_response.sm
crawler/src/: appcontroller.rs  main.rs
crawler/src/cache/: cache_service.rs  mod.rs
crawler/src/cache/providers/file/: file_cache_provider.rs  mod.rs
crawler/src/crawlers/: mod.rs
crawler/src/crawlers/berlin/: config.json  mod.rs
crawler/src/crawlers/berlin/gateway/: mod.rs  school_gateway.rs
crawler/src/crawlers/berlin/models/: details_result.rs  mod.rs  root_result.rs  school_results.rs
crawler/src/crawlers/berlin/node_handlers/: mod.rs  (+2 more)
crawler/src/dal/: mod.rs
crawler/src/dal/objects/: connection_details.rs
crawler/src/dal/postgres/: db_async_repository.rs  db_repository.rs  mod.rs
crawler/src/models/: catchment_area.rs  crawler_config.rs  crawler_request.rs  crawler_response.rs  error.rs  geocode.rs  geometry.rs  location.rs  mapping.rs  mod.rs  object_base.rs  region_config.rs  school.rs
crawler/src/platform/: config.json  mod.rs  platform_traits.rs
crawler/src/services/: cli_parser.rs  config_service.rs  crawler_service.rs  database_service.rs  geo_service.rs  html_parser_service.rs  id_service.rs  mod.rs  region_service.rs  statistics_service.rs
crawler/src/services/geocoding/: geocode_service.rs  mod.rs
crawler/src/tests/unit/: test.rs
crawler/src/utils/: file_utils.rs  http_client.rs  json_parser.rs  mod.rs
crawler/tests/: tests.rs
(+20 files in other folders)
