[package]
name = "crawler"
version = "0.1.0"
authors = ["Furqan Shaikh <furqan.shaikh@omio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", features = ["compat"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11.0"
async-trait="0.1.24"
geojson= "*"
geo="0.12.2"
uuid = {version = "0.8.1", features = ["v4"] }
bincode = "1.2.1"
postgres = { version= "0.17.2", features = ["with-uuid-0_8", "with-geo-types-0_4","with-chrono-0_4"]}
tokio-postgres = { version= "0.5.3", features = ["with-uuid-0_8", "with-geo-types-0_4","with-chrono-0_4"]}
tokio-executor = "0.1.10"